# goit-ds-hw-01

./: .gitignore  README.md
module_1_task_1/: README.md  classes_library.py  pyproject.toml
module_1_task_2/: Dockerfile  README.md  book_database.pkl  main.py
